tests/base/invalid/MethodCall_CompileFail_8.whiley
import whiley.lang.*:*

int f():
    x = spawn 1
    return 1

void System::main([string] args):
    x = f()
    this.out.println(str(x))
